marta marta marta

--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
-<html lang="en-US" id="top">
+<html lang="en" class="firefly">
 <meta charset="utf-8">
-<title>hot enuf.</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="deeppink">
-<meta name="color-scheme" content="dark light">
-<meta name="description" content="hot enuf for lava.">
-<link rel="stylesheet" href="wander.css" media="(prefers-color-scheme:light)">
-<link rel="stylesheet" href="wonder.css" media="(prefers-color-scheme:dark)">
-<link rel="stylesheet" href="wall.css" media="all">
-<link rel="help" href="https://webmural.dev">
-<link rel="icon" href="icon.svg">
-<body class="free">
 
-<figure class="bold pad" aria-label="yup">
-  <blockquote>
-    <a href="#enuf"><i>mars</i></a>
-  </blockquote>
-  <figcaption id="enuf">
-    mars<br>
-    amrs<br>
-    rams<br>
-    <blockquote>
-      <a href="https://webmural.com/rising"><em>web<sup>mural</sup></em></a>
-    </blockquote>
-  </figcaption>
-</figure>
+<title>mars mars mars</title>
+
+<meta name="viewport" content="width=device-width">
+<meta name="theme-color" content="#fa8">
+<meta name="color-scheme" content="light">
+<meta name="description" content="funny martian sparks">
+
+<style>
+  :focus {
+    outline-style: dotted;
+    outline-width: thick;
+  }
+  html { font-size: max(1em, 3vmax) }
+  body { margin: 1em }
+</style>
+
+<link rel="stylesheet" href="firefly.css" media=(color)>
+<link rel="home" href="https://p9e.page">
+<link rel="home" href="https://s9a.page">
+
+<h1><a href="https://p9e.page/sparks">mars</a></h1>
+<menu>
+  <li>h<b>eat</b>
+  <li>s<b>pee</b>d
+  <li>br<b>ash</b>
+  <li><a href="https://p9e.page/wobble"><b>bra</b>ve</a>
+  <li><b>act</b><mark>ion</mark>
+  <li><b>act</b><mark>ive</mark>
+  <li><b>act</b><a href="https://s9a.page/firefly">ivism</a>
+  <li>re<a href="https://p9e.page/firefly">search</a>
+  <li><a href="https://p9e.page/aries"><mark>rams</mark></a>
+  <li><a href="https://p9e.page/pluto"><b>scor</b>pio</a>
+</menu>
